--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.3",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "dompurify": "^3.1.7",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
