--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "shrimppond",
+  "homepage": "https://vanvu0211.github.io/shrimp-pond-web",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy" :"npm run build",
+    "deploy":"gh-pages -d build",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -16,7 +19,6 @@
     "axios": "^1.7.3",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
-    "cors": "^2.8.5",
     "dompurify": "^3.1.7",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
